fixed text overflowing on the schedule card with certain classes

--- a/src/style/schedule/scheduleCourse.scss
+++ b/src/style/schedule/scheduleCourse.scss
@@ -20,7 +20,7 @@
 
 .schedule-course {
     height: 55px;
-    width: 280px;
+    width: 400px;
     background: white;
     box-shadow: 0 2px 14px 0 rgba(0, 0, 0, 0.2);
 
